<resources>
    <string name="app_name">CliWatch</string>
    <string name="calculate">Calculate</string>
    <string name="track_data">Track Data</string>
    <string name="result">Result</string>
    <string name="Result">Result</string>
    <string name="number">Number</string>
    <string name="in_litres">In Litres</string>
    <string name="water_consumed">Water Consumed</string>
    <string name="waste_produced">Waste Produced</string>
    <string name="travelling_using_vehicles">Transportation</string>
    <string name="member_in_family">Family Members</string>
    <string name="in_garbage_bags_used">Garbage Bags Used</string>
    <string name="in_kms">In KM</string>
    <string name="name">Name</string>
    <string name="day">Date</string>
    <string name="write_data">Submit</string>
    <string name="read_data">Read Data</string>
    <string name="delete_all">Delete All</string>
    <string name="calculateTitle">Calculate Your Carbon Footprint</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Select</string>
    <string name="ct">CT</string>
    <string name="title">Title</string>
    <string name="days">Days</string>
    <string name="notes">Notes</string>
    <string name="add">Add</string>
    <string name="goal_added">Goal Added!</string>
    <string name="add_another">Add another goal</string>
    <string name="viewGoal">View your goals</string>
    <string name="done_text">Done</string>
    <string name="total">Total</string>
    <string name="update">Update</string>
    <string name="no_notes">No Notes</string>
    <string name="no_goals">No Goals</string>
    <string name="delete">Delete</string>
    <string name="start_goals">Start goals</string>
    <string name="start_now">Start now</string>
    <string name="required">Required</string>
</resources>